--- a/www/css/index.css
+++ b/www/css/index.css
@@ -11,7 +11,7 @@ body{
     overflow: hidden;
 }
 .downloadView .input_url{
-    width: 650px;
+    min-width: 650px;
     margin-left: 15px;
 }
 .downloadView .optionsView{
