--- a/www/css/index.css
+++ b/www/css/index.css
@@ -8,44 +8,65 @@ body{
 
 
 .downloadView{
-    overflow: hidden;
+    position: relative;
 }
 .downloadView .input_url{
     min-width: 650px;
     margin-left: 15px;
 }
 .downloadView .optionsView{
+    clear: both;
     height: 0;
     visibility: hidden;
-    transition-property: all;
-    transition-duration: 0.5s
-}
-.downloadView .loader{
-    visibility: hidden;
-    opacity: 0;
     transition-property: all;
     transition-duration: 0.5s;
-    padding: 0px;
-}
-.downloadView .loader.visible{
-    opacity: 1;
-    visibility: visible;
-    padding: 10px;
-}
-.downloadView.loaded .loader.visible{
-    height: 0;
-    opacity: 0;
-    padding: 0;
+    margin-bottom: 0;
 }
 .downloadView.loaded .optionsView.visible{
-    min-height: 210px;
     visibility: visible;
+    min-height: 350px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.downloadView .optionsView .panel-body{
+    visibility: hidden;
+    opacity: 0;
+    transition:visibility 0s linear 0.5s;
+}
+.downloadView.loaded .optionsView.visible .panel-body{
+    visibility: visible;
+    opacity: 1;
+}
+.downloadView .loader{
+    clear: both;
+    visibility: hidden;
+    height: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    opacity: 0;
+    transition:visibility 0s linear 0.5s,opacity 0.5s,height 0.5s,padding-bottom 0.5s,padding-top 0.5s;
+}
+.downloadView .loader.visible{
+    visibility: visible;
+    opacity: 1;
+    height: 50px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.downloadView.loaded .loader.visible{
+    visibility: hidden;
+    height: 0;
+    opacity: 0;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .downloadView .errorsView{
+    clear: both;
     opacity: 0;
     height: 0;
     margin-top: 0;
+    margin-bottom: 0;
     visibility: hidden;
     transition-property: all;
     transition-duration: 0.5s
@@ -55,8 +76,14 @@ body{
     opacity: 1;
     height: auto;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
+
+
+.currentsView{
+    clear: both;
+}
 .currentsView .table-responsive{
     opacity: 0;
     height: 0;
@@ -83,8 +110,10 @@ body{
 .currentsView tr{
 }
 .currentsView tr td{
-    position: relative;
     vertical-align: middle;
+}
+.currentsView tr td .status-container{
+    position: relative;
 }
 .currentsView span{
     font-size: 1.3em;
