add height to url input bar to avoid flicking effect when pouseover btn moved loader to top for more smooth ui

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -10,6 +10,9 @@ body{
 .downloadView{
     position: relative;
 }
+.downloadView .downloadSettings{
+    min-height: 50px;
+}
 .downloadView .input_url{
     min-width: 650px;
     margin-left: 15px;
